--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+actix-web = "4.0"
+serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1.0", features = ["full"] }
+askama = "0.14" # для шаблонов
+dotenv = "0.15" # для переменных окружения
+chrono = { version = "0.4"}
