--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,5 +3,7 @@ services:
     image: ghcr.io/bizkey/webaggregator/webaggregator:latest
     pull_policy: always
     container_name: webaggregator
+    env_file:
+      - .env
     ports:
       - "12345:8080"
