--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4.11"
+sqlx = { version = "0.8.6", features = ["postgres"] }
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["full"] }
 askama = "0.14"
+dotenv = "0.15"
 chrono = { version = "0.4.41"}
