--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["full"] }
 askama = "0.14"
 dotenv = "0.15"
-chrono = { version = "0.4.41"}
+chrono = { version = "0.4.41", features = ["serde"]  }
