--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     image: ghcr.io/bizkey/webaggregator/webaggregator:latest
     pull_policy: always
     container_name: webaggregator
+    network_mode: host  
     env_file:
       - .env
     ports:
