--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ tokio = { version = "1.47.1", features = ["full"] }
 askama = { version = "0.14", features = ["serde_json"]}
 dotenv = "0.15"
 chrono = { version = "0.4.41", features = ["serde"]  }
+log = "0.4.28"
+env_logger = "0.11.8"
